# migration-scraper

./: .gitignore  CLAUDE.md  README.md  app.py  prompt  pyproject.toml  requirements.txt
.claude/: settings.claude.json  settings.local.json
scraper/: cleaner.py  cli.py  extractor.py  fetcher.py  output.py
